Inserted setPort command and added json and jsoup dependencies to Maven so that we don't have to add the jar libraries separately.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+        <dependency>
+            <!-- jsoup HTML parser library @ http://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.3</version>
+        </dependency>
+        <dependency>
             <groupId>spark</groupId>
             <artifactId>spark</artifactId>
             <version>0.9.9.3-SNAPSHOT</version>
