--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.7.3</version>
         </dependency>
+
         <dependency>
-            <groupId>spark</groupId>
-            <artifactId>spark</artifactId>
-            <version>0.9.9.3-SNAPSHOT</version>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>1.1.1</version>
         </dependency>
 
     </dependencies>
