--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>PiperServer</groupId>
     <artifactId>PiperServer</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <repositories>
+        <repository>
+            <id>Spark repository</id>
+            <url>http://www.sparkjava.com/nexus/content/repositories/spark/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -22,12 +28,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.sparkjava</groupId>
-            <artifactId>spark-core</artifactId>
-            <version>1.1.1</version>
+            <groupId>spark</groupId>
+            <artifactId>spark</artifactId>
+            <version>0.9.9.3-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
-
 
 </project>
