--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
 
 
         <dependency>
-            <groupId>spark</groupId>
-            <artifactId>spark</artifactId>
-            <version>0.9.9.3-SNAPSHOT</version>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
